--- a/react-example/src/detail/styles.css
+++ b/react-example/src/detail/styles.css
@@ -1,6 +1,6 @@
 .detail {
   flex: 1;
-  /*background: rgba(255, 255, 255, 0.9);*/
+  padding: 2em;
   background: linear-gradient(
     rgba(255, 255, 255, 0.9),
     rgba(255, 255, 255, 0.65)
